# Kuka-Jetson-Conversion

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  architecture_mindmap.mermaid  coding_tasks.md  control_interface_diagram.mermaid  human_tasks.md  implementation_flowchart.mermaid  kuka_ml_controller_roadmap.md  ml_dataflow_diagram.mermaid  pyproject.toml  repository_structure_fixed.md  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  safety_issue.md
.github/workflows/: lint.yml  tests.yml
config/control/: pid_gains.yaml
config/hardware/: ethercat_network.yaml
config/ml/: act_config.yaml
config/robot/: kuka_kr150.yaml
config/safety/: safety_limits.yaml
data/: README.md
docs/: README.md
docs/project/: information_gathering_checklist.md  project_analysis.md  quick_start_checklist.md
src/: __init__.py
src/control/: __init__.py  feedforward.py  gcode_interpreter.py  kinematics.py  mode_manager.py  pid_controller.py  realtime_controller.py  trajectory_planner.py
src/data/: __init__.py  augmentation.py  dataloader.py  dataset_manager.py  preprocessing.py  visualization.py
src/deployment/: __init__.py  benchmarking.py  hot_swap.py  model_server.py  tensorrt_converter.py
src/hardware/: __init__.py  drive_interface.py  encoder_interface.py  ethercat_master.py  gpio_interface.py  io_module.py
src/models/: __init__.py  act_model.py  base_model.py  behavioral_cloning.py  diffusion_policy.py  online_learning.py  (+1 more)
tests/: __init__.py  conftest.py
(+40 files in other folders)
